--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -17,7 +17,7 @@ com_Footer As CanvasComponent:
         LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
         LayoutMode: =LayoutMode.Auto
         PaddingLeft: =15
-        PaddingRight: =20
+        PaddingRight: =15
         Width: =Max(App.Width, App.MinScreenWidth)
         ZIndex: =1
 
@@ -90,109 +90,109 @@ com_Footer As CanvasComponent:
             Width: =Parent.Width
             ZIndex: =5
 
-            Container3 As groupContainer.manualLayoutContainer:
-                AlignInContainer: =AlignInContainer.SetByContainer
-                DropShadow: =DropShadow.Light
-                Height: =Parent.Height
-                LayoutMinHeight: =50
-                LayoutMinWidth: =250
-                RadiusBottomLeft: =4
-                RadiusBottomRight: =4
-                RadiusTopLeft: =4
-                RadiusTopRight: =4
-                Y: =
-                ZIndex: =1
-
-                btn_Nav As Button:
-                    BasePaletteColor: =
-                    BorderStyle: =""
-                    DisplayMode: =If(isLoading, DisplayMode.Disabled, DisplayMode.Edit)
-                    Height: =32
-                    Icon: ="Database"
-                    Layout: ='ButtonCanvas.Layout'.IconAfter
-                    OnSelect: |
-                        =Set(
-                            isLoading,
-                            true
-                        );
+            btn_Nav As Button:
+                BasePaletteColor: =
+                BorderStyle: =""
+                DisplayMode: =If(isLoading, DisplayMode.Disabled, DisplayMode.Edit)
+                Height: =32
+                Icon: ="Database"
+                Layout: ='ButtonCanvas.Layout'.IconAfter
+                LayoutMinHeight: =32
+                LayoutMinWidth: =96
+                OnSelect: |
+                    =Set(
+                        isLoading,
+                        true
+                    );
+                    IfError(
+                        GetXml.Run(
+                            SelectedFile,
+                            ReadyForProcessing
+                        ),
                         IfError(
-                            GetXml.Run(
+                            UpdateXML.Run(
+                                com_Footer.JSONData,
                                 SelectedFile,
-                                ReadyForProcessing
+                                SelectedQueue
                             ),
-                            IfError(
-                                UpdateXML.Run(
-                                    com_Footer.JSONData,
+                            Notify(
+                                "Došlo je do greške!",
+                                NotificationType.Error,
+                                2000
+                            ),
+                            Notify(
+                                "Uspješno ažuriranje!",
+                                NotificationType.Success,
+                                2000
+                            );
+                            If(
+                                chb_ReadyForNav.Checked,
+                                ChangeXmlStatus.Run(
                                     SelectedFile,
-                                    SelectedQueue
-                                ),
-                                Notify(
-                                    "Došlo je do greške!",
-                                    NotificationType.Error,
-                                    2000
-                                ),
-                                Notify(
-                                    "Uspješno ažuriranje!",
-                                    NotificationType.Success,
-                                    2000
+                                    SelectedQueue,
+                                    ReadyForNAVProcessing
                                 );
+                                PrintDoc.Run(com_Footer.JSONData);
+                                Navigate(
+                                    scr_Entry,
+                                    ScreenTransition.Fade
+                                ),
                                 If(
-                                    chb_ReadyForNav.Checked,
+                                    chb_Dorada.Checked,
                                     ChangeXmlStatus.Run(
                                         SelectedFile,
                                         SelectedQueue,
                                         ReadyForNAVProcessing
                                     );
-                                    PrintDoc.Run(com_Footer.JSONData);
                                     Navigate(
                                         scr_Entry,
                                         ScreenTransition.Fade
                                     ),
-                                    If(
-                                        chb_Dorada.Checked,
-                                        ChangeXmlStatus.Run(
-                                            SelectedFile,
-                                            SelectedQueue,
-                                            ReadyForNAVProcessing
-                                        );
-                                        Navigate(
-                                            scr_Entry,
-                                            ScreenTransition.Fade
-                                        ),
-                                        Navigate(
-                                            App.ActiveScreen,
-                                            ScreenTransition.Fade
-                                        )
+                                    Navigate(
+                                        App.ActiveScreen,
+                                        ScreenTransition.Fade
                                     )
-                                );
-                            ),
-                            Set(
-                                SelectedQueue,
-                                ReadyForProcessing
+                                )
                             );
-                            Notify(
-                                "Postoje izmjene u ovom fajlu.",
-                                NotificationType.Information,
-                                2000
-                            );
-                            Navigate(
-                                App.ActiveScreen,
-                                ScreenTransition.Fade
-                            )
-                        );
+                        ),
                         Set(
-                            isLoading,
-                            false
+                            SelectedQueue,
+                            ReadyForProcessing
                         );
-                    PaddingBottom: =
-                    PaddingRight: =
-                    PaddingTop: =
-                    Text: ="NAV"
-                    VerticalAlign: =VerticalAlign.Middle
-                    Width: =96
-                    X: =15
-                    Y: =12
-                    ZIndex: =1
+                        Notify(
+                            "Postoje izmjene u ovom fajlu.",
+                            NotificationType.Information,
+                            2000
+                        );
+                        Navigate(
+                            App.ActiveScreen,
+                            ScreenTransition.Fade
+                        )
+                    );
+                    Set(
+                        isLoading,
+                        false
+                    );
+                PaddingBottom: =
+                PaddingRight: =
+                PaddingTop: =
+                Text: ="NAV"
+                VerticalAlign: =VerticalAlign.Middle
+                Width: =96
+                X: =15
+                Y: =12
+                ZIndex: =1
+
+            Label1 As label:
+                BorderColor: =App.Theme.Colors.Darker40
+                Color: =RGBA(0, 0, 0, 1)
+                DisabledColor: =RGBA(166, 166, 166, 1)
+                Font: =App.Theme.Font
+                Height: =Parent.Height
+                Size: =13
+                Text: =""
+                Width: =15
+                ZIndex: =2
 
             btn_Save As Button:
                 BasePaletteColor: =
@@ -278,7 +278,7 @@ com_Footer As CanvasComponent:
                     );
                 Text: ="Sačuvaj"
                 Width: =96
-                X: =0
-                Y: =0
-                ZIndex: =2
+                X: =39
+                Y: =12
+                ZIndex: =3
 
