--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -16,8 +16,8 @@ com_Footer As CanvasComponent:
         LayoutAlignItems: =LayoutAlignItems.Center
         LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
         LayoutMode: =LayoutMode.Auto
-        PaddingLeft: =15
-        PaddingRight: =15
+        PaddingLeft: =10
+        PaddingRight: =10
         Width: =Max(App.Width, App.MinScreenWidth)
         ZIndex: =1
 
@@ -223,6 +223,7 @@ com_Footer As CanvasComponent:
                             SelectedQueue,
                             ReadyForNAVProcessing
                         );
+                        PrintDoc.Run(com_Footer.JSONData);
                         Navigate(
                             scr_Entry,
                             ScreenTransition.Fade
