--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -99,12 +99,11 @@ com_Footer As CanvasComponent:
                 Layout: ='ButtonCanvas.Layout'.IconAfter
                 LayoutMinHeight: =32
                 LayoutMinWidth: =96
-                OnSelect: |-
+                OnSelect: |
                     =Set(
                         isLoading,
                         true
                     );
-                    
                     IfError(
                         UpdateXML.Run(
                             com_Footer.JSONData,
@@ -127,7 +126,7 @@ com_Footer As CanvasComponent:
                             ReadyForNAVProcessing
                         );
                         Navigate(
-                            scr_Entry,
+                            App.ActiveScreen,
                             ScreenTransition.Fade
                         )
                     );
@@ -135,37 +134,6 @@ com_Footer As CanvasComponent:
                         isLoading,
                         false
                     );
-                    /*
-                    If(
-                        chb_ReadyForNav.Checked,
-                        ChangeXmlStatus.Run(
-                            SelectedFile,
-                            SelectedQueue,
-                            ReadyForNAVProcessing
-                        );
-                        PrintDoc.Run(com_Footer.JSONData);
-                        Navigate(
-                            scr_Entry,
-                            ScreenTransition.Fade
-                        ),
-                        If(
-                            chb_Dorada.Checked,
-                            ChangeXmlStatus.Run(
-                                SelectedFile,
-                                SelectedQueue,
-                                ReadyForNAVProcessing
-                            );
-                            Navigate(
-                                scr_Entry,
-                                ScreenTransition.Fade
-                            ),
-                            Navigate(
-                                App.ActiveScreen,
-                                ScreenTransition.Fade
-                            )
-                        )
-                    );
-                    */
                 PaddingBottom: =
                 PaddingRight: =
                 PaddingTop: =
@@ -196,12 +164,11 @@ com_Footer As CanvasComponent:
                 Layout: ='ButtonCanvas.Layout'.IconAfter
                 LayoutMinHeight: =32
                 LayoutMinWidth: =96
-                OnSelect: |-
+                OnSelect: |
                     =Set(
                         isLoading,
                         true
                     );
-                    
                     IfError(
                         UpdateXML.Run(
                             com_Footer.JSONData,
@@ -233,37 +200,6 @@ com_Footer As CanvasComponent:
                         isLoading,
                         false
                     );
-                    /*
-                    If(
-                        chb_ReadyForNav.Checked,
-                        ChangeXmlStatus.Run(
-                            SelectedFile,
-                            SelectedQueue,
-                            ReadyForNAVProcessing
-                        );
-                        PrintDoc.Run(com_Footer.JSONData);
-                        Navigate(
-                            scr_Entry,
-                            ScreenTransition.Fade
-                        ),
-                        If(
-                            chb_Dorada.Checked,
-                            ChangeXmlStatus.Run(
-                                SelectedFile,
-                                SelectedQueue,
-                                ReadyForNAVProcessing
-                            );
-                            Navigate(
-                                scr_Entry,
-                                ScreenTransition.Fade
-                            ),
-                            Navigate(
-                                App.ActiveScreen,
-                                ScreenTransition.Fade
-                            )
-                        )
-                    );
-                    */
                 PaddingBottom: =
                 PaddingRight: =
                 PaddingTop: =
