--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -116,7 +116,7 @@ com_Footer As CanvasComponent:
                             2000
                         ),
                         Notify(
-                            "Uspješno ažuriranje!",
+                            "Dokument poslan na prelotiranje.",
                             NotificationType.Success,
                             2000
                         );
@@ -181,7 +181,7 @@ com_Footer As CanvasComponent:
                             2000
                         ),
                         Notify(
-                            "Uspješno ažuriranje!",
+                            "Dokument uspješno procesiran.",
                             NotificationType.Success,
                             2000
                         );
