--- a/BSiNS/Src/App.fx.yaml
+++ b/BSiNS/Src/App.fx.yaml
@@ -15,8 +15,8 @@ App As appinfo:
         );
         ReadyForProcessing = "ReadyForProcessing";
         InProgress = "InProgress";
-        ReadyForNAVProcessing = "ReadyForNAVProcessing";
-        NAVChanges = "NAVChanges";
+        ReadyForNAVProcessing = "ReadyForNavProcessing";
+        //NAVChanges = "NAVChanges";
     OnStart: =
     StartScreen: =
     Theme: =RedTheme
