--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -191,10 +191,10 @@ com_Footer As CanvasComponent:
                             SelectedQueue,
                             ReadyForNAVProcessing
                         );
-                        /*Navigate(
-                            App.ActiveScreen,
+                        Navigate(
+                            scr_Entry,
                             ScreenTransition.Fade
-                        )*/
+                        )
                     );
                     Set(
                         isLoading,
