--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -229,8 +229,12 @@ com_Footer As CanvasComponent:
                 Layout: ='ButtonCanvas.Layout'.TextOnly
                 LayoutMinHeight: =32
                 LayoutMinWidth: =96
-                OnSelect: |
-                    =Set(
+                OnSelect: |-
+                    =Set(nesto,
+                            com_Footer.JSONData
+                        )
+                    
+                    /*Set(
                         isLoading,
                         true
                     );
@@ -256,6 +260,7 @@ com_Footer As CanvasComponent:
                         isLoading,
                         false
                     );
+                    */
                 Text: ="Sačuvaj"
                 Width: =96
                 X: =39
