--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -230,11 +230,7 @@ com_Footer As CanvasComponent:
                 LayoutMinHeight: =32
                 LayoutMinWidth: =96
                 OnSelect: |-
-                    =Set(nesto,
-                            com_Footer.JSONData
-                        )
-                    
-                    /*Set(
+                    =Set(
                         isLoading,
                         true
                     );
@@ -260,7 +256,6 @@ com_Footer As CanvasComponent:
                         isLoading,
                         false
                     );
-                    */
                 Text: ="Sačuvaj"
                 Width: =96
                 X: =39
