--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -513,7 +513,7 @@ com_Galleries As CanvasComponent:
                         PaddingRight: =0
                         PaddingTop: =0
                         Size: =12
-                        Text: =ThisItem.Item_No
+                        Text: =ThisItem.Entry_No
                         VerticalAlign: =VerticalAlign.Top
                         Width: =Parent.TemplateWidth - 150
                         X: =Title3_2.Width + Title3_2.X
